--- a/src/app/components/pages/warranty/warranty-request/create/create.component.html
+++ b/src/app/components/pages/warranty/warranty-request/create/create.component.html
@@ -330,7 +330,7 @@
                                         <label
                                             for="actual-btn"
                                             class="custom-file-upload"
-                                            >Choose File</label
+                                            >Chọn ảnh</label
                                         >
                                         <!-- name of file chosen -->
                                         <span id="file-chosen"
