--- a/src/app/components/pages/warehouse/stock-in/create/create.component.html
+++ b/src/app/components/pages/warehouse/stock-in/create/create.component.html
@@ -431,25 +431,17 @@
                 >
                     <div class="grid p-fluid">
                         <div class="col-12 md:col-12">
-                            <div class="supplier-select mb-5">
-                                <p-treeSelect
-                                    (onClear)="onClear()"
-                                    optionLabel="label"
-                                    [ngModelOptions]="{ standalone: true }"
-                                    [showClear]="true"
-                                    (onNodeSelect)="onNodeSelect($event)"
-                                    class="md:w-100 w-full"
-                                    containerStyleClass="w-full"
-                                    [(ngModel)]="selectedNodes"
-                                    [options]="treeCategory"
-                                    placeholder="Chọn nhà cung cấp"
-                                    [filter]="true"
-                                    [filterInputAutoFocus]="true"
+                            <div class="field grid">
+                                <!-- Tổng số sản phẩm -->
+
+                                <div class="col-12 mb-2 md:col-5 md:mb-0">
+                                    Chi nhánh:
+                                </div>
+                                <div
+                                    class="col-12 mb-2 md:col-7 md:mb-0 flex justify-content-end"
                                 >
-                                    <ng-template let-node pTemplate="default">
-                                        <span>{{ node.name }}</span>
-                                    </ng-template>
-                                </p-treeSelect>
+                                    {{ userCurrent.branchName }}
+                                </div>
                             </div>
 
                             <div class="field grid">
