--- a/src/app/components/pages/merchandise/branch-receiving/branch-receiving.component.html
+++ b/src/app/components/pages/merchandise/branch-receiving/branch-receiving.component.html
@@ -353,7 +353,7 @@
                                 {{ data.quantity }}
                             </td>
                             <td style="width: 13.5%; text-align: center">
-                                /{{ data.quantity }}
+                                {{ data.quantity }}
                             </td>
                             <td style="width: 12.5%; text-align: center">
                                 {{ data.totalPriceVariant | currency:'VND' }}
