--- a/src/app/components/pages/product-category/show-product-category/show-product-category.component.html
+++ b/src/app/components/pages/product-category/show-product-category/show-product-category.component.html
@@ -129,13 +129,20 @@
                 </tr>
               </ng-template>
             </p-table>
-            <div>
+            <div class="paging-bot dg-fix">
+              <div class="paging-info">
+                <div [innerHTML]="currentPageReport"></div>
+              </div>
               <p-paginator
-                [rows]="pageSize"
-                (onPageChange)="onPageChange($event)"
-                [totalRecords]="totalRecordsCount > 0 ? totalRecordsCount : 1"
-                [rowsPerPageOptions]="[10, 20, 30]"
-              ></p-paginator>
+                      [rows]="this.pageSize"
+                      (onPageChange)="onPageChange($event)"
+                      [totalRecords]="totalRecordsCount > 0 ? totalRecordsCount : 1"
+                      [rowsPerPageOptions]="[10, 20, 30]"
+                      [first]="
+                        (this.pageNumber - 1) *
+                        this.pageSize
+                      "
+                    ></p-paginator>
             </div>
           </div>
         </div>
