--- a/src/app/components/pages/warehouse/stock-in/show/show.component.html
+++ b/src/app/components/pages/warehouse/stock-in/show/show.component.html
@@ -101,7 +101,7 @@
                         </td>
                         <td style="width: 15%; min-width: 10rem">
                             <span class="p-column-title">CreateName</span>
-                            <!-- {{ stockInItem.name }} -->
+                            {{ this.userCurrent?.name }}
                         </td>
                         <td style="width: 14%; min-width: 10rem">
                             <span class="p-column-title"
@@ -134,13 +134,16 @@
                     </tr>
                 </ng-template>
             </p-table>
+            <div *ngIf="totalRecordsCount === 0" style="text-align: center">
+                <strong style="text-align: center; width: 100%"
+                  >Không tìm thấy kết quả phù hợp</strong
+                >
+              </div>
             <div *ngIf="stockInList?.length > 0">
                 <p-paginator
                     [rows]="pageSize"
                     (onPageChange)="onPageChange($event)"
-                    [totalRecords]="
-                        totalRecordsCount > 0 ? totalRecordsCount : 1
-                    "
+                    [totalRecords]="totalRecordsCount > 0 ? totalRecordsCount : 1"
                     [rowsPerPageOptions]="[10, 20, 30]"
                 ></p-paginator>
             </div>
