--- a/src/app/components/pages/warehouse/stock-transfer/stock-transfer.component.html
+++ b/src/app/components/pages/warehouse/stock-transfer/stock-transfer.component.html
@@ -95,11 +95,10 @@
                                 <label
                                     for="email1"
                                     class="block text-900 text-large font-weight mb-2"
-                                    >Ngày tạo:</label
-                                >
+                                    >Ngày tạo:</label>
                                 <p-calendar
                                     [showIcon]="true"
-                                    placeholder="Chọn khoẳng thời gian"
+                                    placeholder="Chọn thời gian"
                                     inputId="icon"
                                 ></p-calendar>
                             </div>
@@ -148,6 +147,11 @@
                     </tr>
                     </ng-template>
                   </p-table>
+                  <div *ngIf="totalRecords === 0" style="text-align: center">
+                    <strong style="text-align: center; width: 100%"
+                      >Không tìm thấy kết quả phù hợp</strong
+                    >
+                  </div>
                   <div class="paging-bot dg-fix">
                     <div class="paging-info">
                       <div [innerHTML]="currentPageReport"></div>
